[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Duarte Nunes <duarte@hey.com>"]
edition = "2018"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[dependencies]
