[package]
name = "aoc2022"
version = "0.1.0"
authors = ["Duarte Nunes <duarte@fastmail.com>"]
edition = "2021"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[dependencies]
anyhow = { workspace = true }
cached = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
utils = { path = "../utils" }
