[package]
name = "aoc2023"
version = "0.1.0"
authors = ["Duarte Nunes <duarte@fastmail.com>"]
edition = "2021"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[[bin]]
name = "day06"
path = "src/day06.rs"
